# Voice-Assistant-MCP-Gemini

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  sample_server_config.json  server_config.json
assistant/: assistant.py  client.py  tk_ui.py  utils.py
servers/: anki.py  utils.py
